[2019-04-25 22:36:53.975] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:36:53.975] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:36:53.975] [logger] [info] Material 0 was added to project test
[2019-04-25 22:36:53.975] [logger] [info] Material 0 was added to project test
[2019-04-25 22:36:53.975] [logger] [info] Material 0 was added to project test
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project test
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project test
[2019-04-25 22:37:43.831] [logger] [info] Material 0 was added to project test
[2019-04-25 22:38:27.593] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:38:27.593] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:38:27.593] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:38:27.593] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:38:27.593] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:38:27.593] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-25 22:38:27.594] [logger] [info] Material 0 was added to project test
[2019-04-25 22:38:27.594] [logger] [info] Material 0 was added to project test
[2019-04-25 22:38:27.594] [logger] [info] Material 0 was added to project test