@@ -4,7 +4,7 @@
             {
                 "id": 1,
                 "jobTitle": "Director",
-                "name": "Bob Bobson"
+                "name": "Bob"
             }
         ],
         "details": {
